<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:layout_height="fill_parent"
    tools:context="me.clandestina.myapplication3.settings">

    <TextView
        android:id="@+id/TextViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:text="@string/settingsLbl"
        android:textSize="10pt"
        android:gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin">
    </TextView>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/inputIP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/direccionIP"
            android:inputType="phone"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/inputPort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/puerto"
            android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>

    <Button android:id="@+id/btn_connect"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_connect"
        android:layout_marginTop="40dp"
        android:onClick="connectToServer"/>
</LinearLayout>
