<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/GridLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:columnCount="3"
    android:rowCount="5"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Operacion"
        android:layout_column="0"
        android:textSize="40dp"
        android:layout_row="2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"

        android:entries="@array/Oper" />

    <EditText
        android:id="@+id/num1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="1"
        android:layout_marginBottom="20dp"
        android:textSize="40dp"
        android:hint="@string/N1"
        android:gravity="right"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/num2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="2"
        android:layout_marginBottom="20dp"
        android:textSize="40dp"
        android:hint="@string/N2"
        android:gravity="right"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/numRes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="3"
        android:layout_marginBottom="20dp"
        android:textSize="40dp"
        android:hint="@string/NRes"
        android:gravity="right"
        android:textDirection="anyRtl"
        android:inputType="number"
        />

    <Button
        android:id="@+id/btnRes"
        android:layout_column="2"
        android:layout_gravity="start|top"
        android:layout_row="4"
        android:text="@string/Comp" />

</GridLayout>